--- a/rezerveTicketing/ticketing/pom.xml
+++ b/rezerveTicketing/ticketing/pom.xml
@@ -93,6 +93,13 @@
             <version>3.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.14.2</version>
+        </dependency>
+
+
 
     </dependencies>
 
