--- a/rezerveTicketing/ticketing/src/main/resources/application.properties
+++ b/rezerveTicketing/ticketing/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
+#change ddl-auto to update to update when modify tables
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=postgres
