--- a/ticketing-client/package.json
+++ b/ticketing-client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.14",
     "@types/react": "^17.0.38",
     "bootstrap": "^5.2.3",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
