new reaact version

--- a/ticketing-client/package.json
+++ b/ticketing-client/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
-    "@types/react": "^17.0.38",
+    "@types/react": "^18.0.9",
     "bootstrap": "^5.2.3",
+    "mdb-react-ui-kit": "^6.0.0",
     "mdbreact": "^5.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
