--- a/ticketing-client/package.json
+++ b/ticketing-client/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.9",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
     "mdb-react-ui-kit": "^6.0.0",
     "mdbreact": "^5.2.0",
     "react": "^18.2.0",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.16",
     "@types/react-dom": "^18.0.11"
   }
 }
