--- a/ticketing-client/package.json
+++ b/ticketing-client/package.json
@@ -14,6 +14,7 @@
     "mdb-react-ui-kit": "^6.0.0",
     "mdbreact": "^5.2.0",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
+    "@types/react-autosuggest": "^10.1.6",
     "@types/react-dom": "^18.0.11"
   }
 }
