--- a/ticketing-client/package.json
+++ b/ticketing-client/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/jquery": "^3.5.16",
+    "@types/lodash": "^4.14.194",
     "@types/react-autosuggest": "^10.1.6",
     "@types/react-dom": "^18.0.11"
   }
