--- a/ticketing-client/package.json
+++ b/ticketing-client/package.json
@@ -17,6 +17,7 @@
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.9.5",
