--- a/ticketing-client/package.json
+++ b/ticketing-client/package.json
@@ -16,11 +16,12 @@
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-datetimepicker": "^0.0.22",
+    "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.0",
-    "react-seat-picker": "^1.5.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -52,6 +53,7 @@
     "@types/jquery": "^3.5.16",
     "@types/lodash": "^4.14.194",
     "@types/react-autosuggest": "^10.1.6",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "^18.0.11"
   }
 }
