--- a/rezerveTicketing/ticketing/src/main/resources/application.properties
+++ b/rezerveTicketing/ticketing/src/main/resources/application.properties
@@ -1,9 +1,21 @@
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
-#change ddl-auto to update to update when modify tables
-spring.jpa.hibernate.show-sql=true
+# PostgreSQL settings
 spring.datasource.url=jdbc:postgresql://localhost:5432/demo
 spring.datasource.username=postgres
 spring.datasource.password=196819
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# JPA settings
+spring.jpa.hibernate.ddl-auto=none
+#change ddl-auto to update to update when modifying tables
+spring.jpa.hibernate.show-sql=true
+
+# Flyway settings
+# Change to true when making flyway changes
+spring.flyway.baseline-on-migrate=false
+
+# MVC settings
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-#server.port=9090
+
+# Uncomment the line below if you want to change the server port
+# server.port=9090
