--- a/rezerveTicketing/ticketing/src/main/resources/application.properties
+++ b/rezerveTicketing/ticketing/src/main/resources/application.properties
@@ -8,11 +8,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # JPA settings
 spring.jpa.hibernate.ddl-auto=none
 #change ddl-auto to update to update when modifying tables
-spring.jpa.hibernate.show-sql=true
+spring.jpa.hibernate.show-sql=false
 
 # Flyway settings
 # Change to true when making flyway changes
-spring.flyway.baseline-on-migrate=false
+spring.flyway.baseline-on-migrate=true
 
 # MVC settings
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
