added login new prop to retrieve email also and starting working on the logic for sending email to user after buying

--- a/ticketing-client/package.json
+++ b/ticketing-client/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.9",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "jquery": "^3.6.4",
     "mdb-react-ui-kit": "^6.0.0",
