--- a/rezerveTicketing/ticketing/src/main/resources/application.properties
+++ b/rezerveTicketing/ticketing/src/main/resources/application.properties
@@ -17,5 +17,13 @@ spring.flyway.baseline-on-migrate=true
 # MVC settings
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-# Uncomment the line below if you want to change the server port
+#email configuration
+spring.mail.host=smtp.mail.yahoo.com
+spring.mail.port=587
+spring.mail.username=ticket.togo@yahoo.com
+spring.mail.password=hearthstone12345
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 # server.port=9090
