--- a/rezerveTicketing/ticketing/src/main/resources/application.properties
+++ b/rezerveTicketing/ticketing/src/main/resources/application.properties
@@ -18,10 +18,10 @@ spring.flyway.baseline-on-migrate=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 #email configuration
-spring.mail.host=smtp.mail.yahoo.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ticket.togo@yahoo.com
-spring.mail.password=hearthstone12345
+spring.mail.username=togoticket2@gmail.com
+spring.mail.password=hugzjscmkdckwlys
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
